# dicom2vdb

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  main_bak.cpp  pack-resources.bat  resource.rc  resources.cpp  window.cpp  window.h
src/: main.cpp
ui/: main.html  style.css
