cmake_minimum_required(VERSION 3.1.5)
project(dicom2vdb VERSION 0.1.0)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
find_package(ITK CONFIG REQUIRED)
find_package(OpenVDB CONFIG REQUIRED)
find_package(Qt5 REQUIRED COMPONENTS Widgets Core Gui)
add_executable(dicom2vdb main.cpp window.cpp)
target_link_libraries(dicom2vdb PRIVATE OpenVDB::openvdb)
target_link_libraries(dicom2vdb PRIVATE ITKCommon ITKIOImageBase ITKIOGDCM ITKIONRRD)
target_link_libraries(dicom2vdb PRIVATE Qt5::Core Qt5::Gui Qt5::Widgets)